More Charmony fixes